--- a/calculator/templates/layout.html
+++ b/calculator/templates/layout.html
@@ -7,25 +7,21 @@
 		href='{{ url_for("static", filename="css/style.css") }}'/>
 	</head>
 	<body>
-		<div id="container">  
-    <ul id="keyboard">   
-        <li class="letter">1</li>  
-        <li class="letter">2</li>  
-        <li class="letter">3</li>  
-        <li class="letter clearl">4</li>  
-        <li class="letter">5</li>  
-        <li class="letter">6</li> 
-      
-        <li class="letter clearl">7</li>  
-        <li class="letter ">8</li>  
-        <li class="letter">9</li>  
-        <li class="letter">0</li>
-        <li class="switch">abc</li>  
-         <li class="return">retur</li>
-         <li class="delete lastitem"><</li>  
-    </ul>  
-</div>  
-  
-<script type="text/javascript" src="js/calculator.js"></script>
+		<button class="button button1">1</button>
+		<button class="button button1">2</button>
+		<button class="button button1">3</button><br>
+		<button class="button button1">4</button>
+		<button class="button button1">5</button>
+		<button class="button button1">6</button><br>
+		<button class="button button1">7</button>
+		<button class="button button1">8</button>
+		<button class="button button1">9</button><br>
+		<button class="button button1">0</button>
+		<button class="button button1">+</button>
+		<button class="button button1">-</button><br>
+		<button class="button button1">*</button>
+		<button class="button button1">/</button>
+		<button class="button button1">=</button>
+		<script src="{{ url_for('static', filename='js/calculator.js') }}"/>
 	</body>
 </html>
